# chatty

./: .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  code.html  db_migration_chat_sessions.sql  docker-compose.yml  files.txt  main.py  pyproject.toml  shopify_products.json  start_worker.sh  test_embeddings.py  worker.py
app/admin/controller/: appcontroller.py  authcontroller.py
app/admin/routes/: approutes.py  authroutes.py  index.py  sessionroutes.py
app/core/config/: config.py  db.py
app/core/models/: models.py
app/core/models/dbontrollers/: admindbcontroller.py  chatbotdbcontroller.py
app/core/schema/: applicationerror.py  errorschema.py  schema.py  schemarespone.py
app/core/services/: ai_orchestrator.py  database_executor.py  filehandler.py  jwt.py  response_synthesis.py  session_memory.py  shopify_return_service.py  shopify_service.py  webcrawler.py
rag/store_1/store_1/: graph_chunk_entity_relation.graphml
rag/store_125/store_125/: graph_chunk_entity_relation.graphml
rag/store_126/store_126/: graph_chunk_entity_relation.graphml
