[project]
name = "crawl-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "crawl4ai>=0.7.8",
    "fastapi>=0.124.4",
    "langchain>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "llama-index>=0.14.12",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "tortoise-orm[asyncpg]>=0.25.1",
    "uvicorn>=0.38.0",
]
